syntax = "proto3";

package health;

service HealthService {
  rpc Check (HealthCheckRequest) returns (HealthCheckResponse);
}

message HealthCheckRequest {
  string service = 1; // опционально: имя проверяемого сервиса
}

message HealthCheckResponse {
  string status = 1; // например: "SERVING"
}
